2001-11-02  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-data-wrapper.c (camel_data_wrapper_init): Initialize our
	private mutex.
	(camel_data_wrapper_finalize): Destroy our private mutex.
	(write_to_stream): Lock around camel_stream_write_to_stream() so
	that we don't get 2 threads trying to read from our stream at the
	same time.

2001-11-01    <NotZed@Ximian.com>

	* camel-vee-folder.c (folder_changed_change): Move all searching
	operations outside of any locks except subfolder lock, same as
	build_folder.  Fix for #14294.

2001-10-31    <NotZed@Ximian.com>

	* providers/local/camel-spool-folder.c (spool_get_message): Same
	as below.

	* providers/local/camel-maildir-folder.c (maildir_get_message):
	Same as below.

	* providers/local/camel-mbox-folder.c (mbox_get_message): Set
	USER_CANCEL if failed due to EINTR.

	* camel-filter-driver.c (camel_filter_driver_filter_mbox): If
	construct from parser fails due to user cancel, set USER_CANCEL on
	exception.

	* camel-mime-part.c (construct_from_parser): Return error if the
	parser had an io error.

	* camel-mime-message.c (construct_from_parser): Check error on
	parser/return error.

	* camel-mime-parser.c (folder_scan_init): Init error number.
	(camel_mime_parser_errno): New function, return errno of any io
	failures.
	(folder_read): Set errno if a failure occured.
	(folder_seek): Same.
	(folder_scan_init_with_fd): Setup errno depeding on ok/failure.
	(folder_scan_init_with_stream): Same.

2001-10-30    <NotZed@Ximian.com>

	* camel-operation.c (camel_operation_new): Dont setup cancel_fd.
	(camel_operation_cancel_fd): If cancel_fd not created, set it up.
	(camel_operation_cancel): Set cancel flag before sending message.
	(cancel_thread): Same.

	* camel-filter-driver.c (camel_filter_driver_filter_mbox): Make
	sure we unref the mimeparse when we're done (successfully).  This
	was leaking an fd every get-mail! :(

	* camel-lock-client.c (camel_lock_helper_init): Close all fd's
	above 2.
